# yo-ho-ho-and-an-alien-gun

./: Cargo.toml
assets/models/pirate/: ship_light.glb
src/: main.rs
