[package]
name = "yo-ho-ho-and-an-extra-terrestrial-gun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
bevy_rapier3d = { version = "0.12.1", features = [ "render" ] }
bevy_prototype_debug_lines = { version = "0.6", features = [ "3d" ] }
rand = "0.8.5"